[package]
name = "candouble"
version = "0.1.0"
authors = ["Erik Doernenburg <erik@thoughtworks.com>"]
build = "build.rs"

[dependencies]
serde = "1.0.76"
serde_json = "1.0.26"
serde_derive = "1.0.76"
libc = "0.2.43"
getopts = "0.2"
gotham = "0.3.0"
hyper = "0.12.18"
mime = "0.3.12"

[features]
pcan = []
